--- a/eco.yml
+++ b/eco.yml
@@ -2,7 +2,7 @@ setup:
   devise: ₲
   base: 100
 '276349233148461056':
-  money: 0
+  money: 1010000
 '276319706829291521':
   money: 100
 '643043364123574273':
