--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "discord.js": "^11.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "uws": "^100.0.1",
     "yaml": "^1.7.2"
   },
