--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
+    "cookie-parser": "^1.4.5",
     "discord.js": "^11.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
