--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
