--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "discord.js": "^11.6.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "fs": "0.0.1-security",
