--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-favicon": "^2.0.1",
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
+    "minimist": ">=1.2.2",
     "node-fetch": "^2.6.0",
     "serve-favicon": "^2.5.0",
     "uws": "^100.0.1",
