--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
+    "cool-ascii-faces": "^1.3.4",
     "discord.js": "^11.6.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
