--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
+    "cat-ascii-faces": "^2.0.0",
     "cookie-parser": "^1.4.5",
     "cool-ascii-faces": "^1.3.4",
     "discord.js": "^11.6.1",
